<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/competence_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="UNDEFINED"
        android:textAlignment="center"
        style="@style/PopupTitleStyle"/>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_detail_description"
        style="@style/RegularTitleStyle"/>

    <TextView
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tags_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RegularTitleStyle"
        android:text="@string/popup_detail_tags"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
    />

    <TextView
        android:id="@+id/niveau_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RegularTitleStyle"
        android:text="@string/popup_detail_level"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_lvl_down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/red"/>

        <TextView
            android:id="@+id/niveau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_lvl_up"
            app:layout_constraintStart_toEndOf="@+id/btn_lvl_down"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/BasicTitleStyle"/>

        <ImageButton
            android:id="@+id/btn_lvl_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_lvl_down"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/green"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/reove_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:drawableLeft="@drawable/ic_delete"
        android:text="Supprimer" />
</LinearLayout>